Fix grid overflow

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -47,18 +47,15 @@ nav .nav-link {
 
 nav .navbar-brand:hover img {
   animation: bounce 0.4s linear 0s infinite alternate none;
+  filter: invert(57%) sepia(24%) saturate(4247%) hue-rotate(0deg)
+    brightness(104%) contrast(105%);
 }
 
 html[data-bs-theme="light"] nav .navbar-brand img {
   filter: invert(1);
 }
 
-nav .navbar-brand:active {
-  filter: invert(57%) sepia(24%) saturate(4247%) hue-rotate(0deg)
-    brightness(104%) contrast(105%);
-}
-
-html[data-bs-theme="light"] nav .navbar-brand:active {
+html[data-bs-theme="light"] nav .navbar-brand:hover img {
   filter: invert(62%) sepia(50%) saturate(4370%) hue-rotate(1deg)
     brightness(104%) contrast(103%);
 }
