--- a/_sass/profile/home.scss
+++ b/_sass/profile/home.scss
@@ -4,11 +4,11 @@
 
 section.hero {
   margin-top: -58px;
-  overflow: hidden;
+  overflow: visible;
   width: 100dvw;
   height: 100dvh;
   display: grid;
-  grid-template: repeat(10, 1fr) / repeat(10, 1fr);
+  grid-template: repeat(10, minmax(0, 1fr)) / repeat(10, minmax(0, 1fr));
 }
 
 section.hero .rgb {
